--- a/03-CSS/index.html
+++ b/03-CSS/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <header>
-        <section class="container">
-            <div class="izquierda"><a href="index.html" class="logo">Vacunación</a></div>
+        <nav class="container">
+            <div class="left"><a href="index.html" class="logo">Vacunación</a></div>
             <div class="nowrap">
                 <a href="#" class="link navigation">Datos</a>
                 <a href="#" class="link navigation">Educación</a>
@@ -25,60 +25,68 @@
                 <a href="#" class="link navigation">Regulación</a>
                 <a href="#" class="link navigation button">Aclaraciones</a>
             </div>
-        </section>
+        </nav>
     </header>
     <main>
         <section class="container">
-            <div class="izquierda">
+            <div class="column left">
                 <div class="triangle-down"></div>
                 <h1 class="blue">¡Recibe tu vacuna!</h1>
-                <p class="gray">Recibe la dosis que te toca para que terminemos con el virus</p>
+                <p class="gray">Recibe la dosis que te toca para que terminemos con el virus, protegete a ti y a los que quieres.</p>
                 <div class="container">
                     <p class="description blue"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-shield-fill-check yellow" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M8 0c-.69 0-1.843.265-2.928.56-1.11.3-2.229.655-2.887.87a1.54 1.54 0 0 0-1.044 1.262c-.596 4.477.787 7.795 2.465 9.99a11.777 11.777 0 0 0 2.517 2.453c.386.273.744.482 1.048.625.28.132.581.24.829.24s.548-.108.829-.24a7.159 7.159 0 0 0 1.048-.625 11.775 11.775 0 0 0 2.517-2.453c1.678-2.195 3.061-5.513 2.465-9.99a1.541 1.541 0 0 0-1.044-1.263 62.467 62.467 0 0 0-2.887-.87C9.843.266 8.69 0 8 0zm2.146 5.146a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 7.793l2.646-2.647z"/>
                     </svg> La mejor protección</p>
                     <p class="description blue"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill yellow" viewBox="0 0 16 16">
                         <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                    </svg> selección de vacunas</p>
+                    </svg> Selección de vacunas</p>
                     <br>
                 </div>
-                <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock-fill" viewBox="0 0 16 16">
+                <p class="blue"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock-fill blue" viewBox="0 0 16 16">
                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
                 </svg> Agenda una cita</p>
             </div>
-            <div class="derecha imgcontainer">
-                <img src="assets/vacuna-female.jpg" alt="imagen de vacuna" width="920" height="506">
+            <div class="column derecha imgcontainer">
+                <img src="assets/vacuna-female.png" alt="imagen de vacuna" width="663" height="502">
             </div>
         </section>
         
         <div class="container over">
             <table>
                 <tr>
-                    <th><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                    <th class="gray"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill blue" viewBox="0 0 16 16">
                         <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
                       </svg> Lugar</th>
-                    <th><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-check-fill" viewBox="0 0 16 16">
+                    <th class="gray"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-check-fill blue" viewBox="0 0 16 16">
                         <path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zm-5.146-5.146-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708z"/>
                       </svg> Fecha</th>
-                    <th><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-circle" viewBox="0 0 16 16">
+                    <th class="gray"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-circle blue" viewBox="0 0 16 16">
                         <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
                         <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
                       </svg> Vacuna</th>
                 </tr>
                 <tr>
-                    <td>Ciudad de México</td>
-                    <td>08 de Julio 2022</td>
-                    <td>Moderna</td>
+                    <td class="blue">Ciudad de México</td>
+                    <td class="blue">08 de Julio 2022</td>
+                    <td class="blue">Moderna</td>
                 </tr>
             </table>
-            <a href="#" class="button">Enviar</a>
+            <a href="#" class="button link">Enviar</a>
         </div>
 
-        <section class="containter">
-            <img src="" alt="AstraZeneca">
-            <img src="" alt="SINOVAC">
-            <img src="" alt="Pfizer">
-            <img src="" alt="Moderna">
+        <section class="container left">
+            <div class="vaccines">
+                <img src="assets/logo-az.png" alt="AstraZeneca" class="logo-vaccine">
+            </div>
+            <div class="vaccines">
+                <img src="assets/logo-Sinovac.png" alt="SINOVAC" class="logo-vaccine">
+            </div>
+            <div class="vaccines">                
+                <img src="assets/logo-pfizer.png" alt="Pfizer" class="logo-vaccine">
+            </div>
+            <div class="vaccines">
+                <img src="assets/logo-moderna.png" alt="Moderna" class="logo-vaccine">
+            </div>
         </section>
 
         <section>
@@ -149,7 +157,7 @@
                         </svg>
                         <p> Llama</p>
                         <p>55101010</p>
-                        <a href="#" class="button">Llamar ahora</a>
+                        <a href="#" class="button link">Llamar ahora</a>
                     </div>
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
@@ -157,7 +165,7 @@
                         </svg>
                         <p> Chat</p>
                         <p>55101010</p>
-                        <a href="#" class="button">Chatear ahora</a>
+                        <a href="#" class="button link">Chatear ahora</a>
                     </div>
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-camera-video-fill" viewBox="0 0 16 16">
@@ -165,7 +173,7 @@
                         </svg>
                         <p> video llamada</p>
                         <p>55101010</p>
-                        <a href="#" class="button">Inicia Videollamada</a>
+                        <a href="#" class="button link">Inicia Videollamada</a>
                     </div>
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-right-dots-fill" viewBox="0 0 16 16">
@@ -173,7 +181,7 @@
                         </svg>
                         <p> mensaje</p>
                         <p>55101010</p>
-                        <a href="#" class="button">Envía mensaje</a>
+                        <a href="#" class="button link">Envía mensaje</a>
                     </div>
                 </div>
         </section>
